# darling-corefoundation

./: CFApplicationPreferences.c  CFArray.c  CFArray.h  CFAttributedString.c  CFAttributedString.h  CFAvailability.h  CFBag.h  CFBase.h  CFBasicHash.h  CFBigNumber.c  CFBigNumber.h  CFBinaryHeap.h  CFBitVector.h  CFBundle.c  CFBundle.h  CFBundlePriv.h  CFBundle_BinaryTypes.h  CFBundle_Internal.h  CFBundle_Resources.c  CFBurstTrie.h  CFByteOrder.h  CFCalendar.c  CFCalendar.h  CFCharacterSet.h  CFCharacterSetPriv.h  CFData.h  CFDate.c  CFDate.h  CFDateFormatter.h  CFDictionary.h  CFError.c  CFError.h  CFError_Private.h  CFFileDescriptor.h  CFFileSecurity.h  CFForwardingPrep.S  CFICUConverters.h  CFICULogging.h  CFInternal.h  CFLocale.h  (+131 more)
Headers/CoreFoundation/: CFAvailability.h  CFBase.h  CFBase.h.in  CFBundle.h  CFBundlePriv.h  CFDictionary.h  CFMachPort.h  CFNotificationCenter.h  CFPreferences.h  CFRunLoop.h  CFRuntime.h  CFString.h  CFURL.h  CFXPCBridge.h  CoreFoundation.h  GSCharacter.h
Headers/GNUstepBase/: GSConfig.h
Source/: CFBundle.m  CFDate.c  CFMachPort.c  CFNotificationCenter.c  CFNumberFormatter.c  CFPreferences.m  CFPropertyList.c  CFRunLoop.c  CFRuntime.c  CFString.c  CFStringUtilities.c  CFURL.c  CFXPCBridge.c  GSPrivate.h  GSUnicode.c
Source/darling/: AppleCFString.h  AppleCFString.m
include/CoreFoundation/: CFAvailability.h  CFBase.h  CFBundlePriv.h  CFInternal.h  CFNotificationCenter.h  CFNumberFormatter.h  CFPreferences.h  CFPriv.h  CFStream.h  CFURL.h  CFXPCBridge.h  CoreFoundation.h  ForFoundationOnly.h  GSInvocation.h  NSInvocationInternal.h  NSMessageBuilder.h  NSSharedKeyDictionary.h
